[package]
name = "hybridscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
subxt = { version = "0.32.1", features = ["web", "jsonrpsee"], default-features = false }
sycamore = { git = "https://github.com/sycamore-rs/sycamore", features = ["suspense", "nightly"] }
sycamore-router = { git = "https://github.com/sycamore-rs/sycamore" }
